# NickCipher

./: .gitignore  README.md  config.py  main.py  requirements.txt
data/base/: alphabet.json  char_weight.json  emoji_pool.json
data/input/: test.txt  test2.txt
data/keys/: keys.json  nicks_key.json
data/output/: decrypted_viktoria.txt  enc_test.txt  enc_test2.txt  sindy.txt  test.txt  testlogger.txt  viktoria.txt
keys/: keys.json
nickcipher/: __main__.py  cipher.py  config.py  keygen.py  main.py  pyproject.toml
nickcipher/core/: cipher.py  filehandler.py  keygen.py
nickcipher/ui/: helpers.py  ui.py
nickcipher/utils/: logger.py
